[package]
name = "dotmatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
fugit = "0.3.6"
max-7219-led-matrix-util = { version = "0.2.4", default-features = false }
max7219 = "0.4.0"
panic-halt = "0.2.0"
# rp-pico = "0.7.0"
seeeduino-xiao-rp2040 = "0.4.0"
